# stra2us

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  docker-compose.staging.yaml  docker-compose.yaml
.githooks/: pre-commit
backend/: .gitignore  Dockerfile  admin.htpasswd.default  client-requirements.sh  client.sh  create_admin.py  migrate_admin_acls.py  requirements-dev.txt  requirements.txt  start.sh  supervisord.conf  test_client.py
client/: library.properties
docs/: acl_model.md  admin_auth_architecture.md  admin_ui_todo.md  (+24 more)
tools/: .deploy-config  .deploy-config.example  .gitignore  README.md  bootstrap-host.sh  pyproject.toml  session.sh  smoke_test.sh  smoke_test_device.sh  stage  sync-secrets.sh
tools/examples/: critterchron_v2.s2s.yaml  example.s2s.yaml
tools/examples/lint_smoke/: clean.s2s.yaml  secret_pairing.s2s.yaml  widget_error.s2s.yaml
tools/stra2us_cli/: __init__.py  __main__.py  catalog.py  catalog_lint.py  catalog_publish.py  cli.py  client.py  config.py  synth.py
tools/stra2us_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/stra2us_cli/sanitizers/: __init__.py  markdown.py  svg.py
tools/tests/: test_admin_kv_live.py  test_bootstrap_seed.sh  test_catalog.py  test_catalog_lint.py  test_catalog_ui_fields.py  test_cmd_set_catalog_encrypted.py  test_config.py  test_encrypted_live.py  test_kvenc.py  test_me_live.py  test_provision_device_live.py  test_publish_assets.py  test_publish_lint.py  test_publish_live.py  test_sanitizer_markdown.py  test_sanitizer_svg.py  test_synth_traffic.py
(+76 files in other folders)
