[project]
name = "stra2us-cli"
version = "0.1.0"
description = "Reference CLI for Stra2us KV catalogs."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "msgpack>=1.0",
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.scripts]
stra2us = "stra2us_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stra2us_cli*"]
