[project]
name = "stra2us-cli"
version = "0.1.0"
description = "Reference CLI for Stra2us KV catalogs."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "msgpack>=1.0",
    "requests>=2.28",
    "pydantic>=2.0",
    # Catalog publish-time sanitizers (see docs/fr_catalog_app_ui.md).
    # markdown-it-py + bleach: render + allowlist-sanitize markdown
    # blocks. defusedxml: parse SVG assets safely (no XML-bombs / no
    # external entities) before the hand-rolled allowlist walker.
    "markdown-it-py>=3.0",
    "bleach>=6.0",
    "defusedxml>=0.7",
]

[project.scripts]
stra2us = "stra2us_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stra2us_cli*"]
